Mon Nov 08 22:54:55 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac,xapian-config.in: If flags are needed to select ANSI
	  mode with the current compiler, then make xapian-config --cxxflags
	  include them so that Xapian users don't have to jump through the
	  same hoops we do.

Mon Nov 08 04:49:21 GMT 2004  Olly Betts <olly@survex.com>

	* backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_database.h,backends/muscat36/,
	  backends/net/net_database.cc,backends/quartz/quartz_database.cc,
	  backends/quartz/quartz_database.h,common/database.h,
	  common/net_database.h,matcher/localmatch.cc: If a database contains
	  no positional information, change NEAR and PHRASE queries into AND
	  queries (as otherwise they'd return no matches at all) (bug#56).
	* tests/api_wrdb.cc: Added feature test phraseorneartoand1.

Mon Nov 08 04:09:04 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac,backends/quartz/btree.cc: Improved what we do to
	  turn on pread and pwrite declarations in unistd.h so that it works
	  on OSF and doesn't need the HAVE_GLIBC test, yet still works on
	  OpenBSD.

Mon Nov 08 03:55:51 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/,testsuite/btreecheck.cc: More refactoring.

Sun Nov 07 20:42:32 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: One more tweak.

Sun Nov 07 18:18:19 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac,include/xapian/version.h.in: Another tweak to hopefully
	  get version.h generation to work everywhere.

Sun Nov 07 15:01:23 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac,include/xapian/version.h.in: Terminating lines with 'N'
	  makes Sun's C++ unhappy.  Try ',' instead.

Sun Nov 07 03:54:42 GMT 2004  Olly Betts <olly@survex.com>

	* tests/api_nodb.cc: Added test_weight1 which tests the built-in
	  Xapian::Weight subclasses (bug#8).

Sun Nov 07 03:36:19 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree_util.h,