@@ -33,6 +33,7 @@ Options:
   --libs	print library linking information
   --ltlibs	print library linking information for linking with GNU libtool
   --cxxflags	print preprocessor and compiler flags
+  --swigflags	print preprocessor flags for SWIG
   --help	display this help and exit successfully
   --version	output version information
 EOF
@@ -67,8 +68,8 @@ while test 0 != "$#"; do
 
     --cxxflags)
 	inc=
-    	# check if this is an uninstalled xapian-config
-   	if test -n "$builddir" -a -f "${builddir}Makefile" ; then
+	# check if this is an uninstalled xapian-config
+	if test -n "$builddir" -a -f "${builddir}Makefile" ; then
 	    inc=
 	    # version.h is generated by configure, so we need builddir too
 	    test "@abs_srcdir@" != "@abs_builddir@" && inc="-I@abs_builddir@/include "
@@ -79,8 +80,8 @@ while test 0 != "$#"; do
 	    # versions of vendor supplied include headers at install time.
 	    # Normally these are used instead of those in /usr/include, but if
 	    # you explicitly pass -I/usr/include you get the non-fixed
-	    # versions.  The most recent GCC versions simply ignore
-	    # -I/usr/include but we want to support older versions too.
+	    # versions.  More recent GCC versions simply ignore -I/usr/include
+	    # but we want to support older versions too.
 	    case "$includedir" in
 	    /usr/include|/usr/include/c++) ;;
 	    *) inc="-I$includedir" ;;
@@ -92,9 +93,23 @@ while test 0 != "$#"; do
 	echo "${cxxflags}$inc"
 	;;
 
+    --swigflags)
+	inc=
+	# check if this is an uninstalled xapian-config
+	if test -n "$builddir" -a -f "${builddir}Makefile" ; then
+	    inc=
+	    # version.h is generated by configure, so we need builddir too
+	    test "@abs_srcdir@" != "@abs_builddir@" && inc="-I@abs_builddir@/include "
+	    inc="$inc-I@abs_srcdir@/include -I@abs_srcdir@/extra"
+	else
+	    inc="-I$includedir"
+	fi
+	echo "$inc"
+	;;
+
     --libs)
-    	# check if this is an uninstalled xapian-config
-   	if test -n "$builddir" -a -f "${builddir}Makefile" ; then
+	# check if this is an uninstalled xapian-config
+	if test -n "$builddir" -a -f "${builddir}Makefile" ; then
 	    if test no = "$xo_lib_xapian" ; then
 		echo "$0: Use libtool and 'xapian-config --ltlibs'" 1>&2
 	    else
@@ -126,8 +141,8 @@ while test 0 != "$#"; do
     --ltlibs)
 	F=
 	test -n "@ldflags@" && F="@ldflags@ "
-    	# check if this is an uninstalled xapian-config
-   	if test -n "$builddir" -a -f "${builddir}Makefile" ; then
+	# check if this is an uninstalled xapian-config
+	if test -n "$builddir" -a -f "${builddir}Makefile" ; then
 	    # don't check if libxapian.la exists yet - it won't unless
 	    # the xapian-core tree has been built!
 	    echo "$F${builddir}extra/libxapianqueryparser.la ${builddir}libxapian.la"
